# COC

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT_SUMMARY.md  DEPLOY_GUIDE.md  LICENSE  RALPH_PROGRESS.md  README.md  README.zh.md  SECURITY.md  config.example.json  package.json
configs/: deployed-contracts-88780.json
contracts/: .gitignore  README.md  burst5.mjs  check-deployer-balance.mjs  check-staked.mjs  check-validator-reg.mjs  check-validator-set.mjs  clawmem-e2e-newchain.mjs  deploy-all-registries-newchain.mjs  deploy-validator-registry.mjs  deployed-registries-newchain.json  fund-faucet-newchain.mjs  gas-report.txt  hardhat.config.cjs  init-pose-newchain.mjs  keygen-anchors.mjs  p3-check-and-finish.mjs  p3-validator-stake-and-verify.mjs  package.json  r1-1-deploy-governance-suite.mjs  r1-1-verify-wiring.mjs  r2-2-governance-demo.mjs  rollback-chain.mjs  smoke-test-registries-newchain.mjs  stake-node3.mjs  stake-validator.mjs  unstake-validator.mjs  x2-broadcast-stake.mjs  x2-deploy-broadcast.mjs  x2-e2e-add-validator.mjs  x2-e2e-ext-2.mjs  x2-fund-and-stake.mjs  x2-stake-cores.mjs  x2-stake-ext34.mjs  x2-stake-from-deployer.mjs  x2-stake-remaining.mjs  x2-stake-replace.mjs  x2-stake-via-28780.mjs
docker/: .dockerignore  Dockerfile.explorer  Dockerfile.faucet  Dockerfile.node  Dockerfile.runtime  Dockerfile.website  docker-compose.external.yml  docker-compose.light.yml  docker-compose.monitoring.yml  docker-compose.testnet.yml  docker-compose.yml  runtime-entrypoint.sh
node/revm-wasm/: Cargo.toml
node/revm-wasm/src/: lib.rs
(+1034 files in other folders)
