[package]
name = "coc-revm-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM bindings for revm EVM engine for COC blockchain"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
revm = { version = "19", default-features = false, features = ["std", "serde"] }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
hex = "0.4"
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
